--- a/page/Header/header.css
+++ b/page/Header/header.css
@@ -1,11 +1,17 @@
 .header {
   display: flex;
   font-family: "Noto Serif", "Times New Roman", serif;
+  background-image: url(../../asset/header__background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 720px;
+  width: 100%;
 }
 
 .header__title {
   position: relative;
-  width: 100%;
+  color: aliceblue;
+  margin-left: 20px;
 }
 
 .header__welcome {
@@ -15,8 +21,8 @@
 }
 
 .header__description {
-  font-size: 20px;
+  font-size: 25px;
   margin: 0;
   margin-top: 20px;
-  width: 850px;
+  width: 750px;
 }
