--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@
 @import url(../block/home.css);
 @import url(../block/about.css);
 @import url(../block/tabs.css);
-
+@import url(../block/contact.css);
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 6rem;
@@ -213,7 +213,6 @@ input {
   overflow: hidden;
 }
 
-.portfolio__item::after,
 .portfolio__data {
   position: absolute;
   transition: all 0.65s var(--transition);
@@ -276,57 +275,6 @@ input {
 
 .portfolio__item:hover .portfolio__data {
   transform: translateY(-2rem);
-}
-
-/*=============== CONTACT ===============*/
-.contact__container {
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  column-gap: 4rem;
-}
-
-.contact__description,
-.contact__input {
-  font-weight: var(--weight-400);
-}
-
-.contact__description {
-  margin-bottom: 3rem;
-}
-
-.contact__description a {
-  color: var(--title-color);
-  font-weight: var(--weight-500);
-}
-
-.contact__form {
-  position: relative;
-}
-
-.contact__input {
-  border: 2px solid var(--border-color);
-  padding: 0.8rem 1.25rem;
-  width: 100%;
-  border-radius: var(--radius);
-  font-size: var(--smaller-font-size);
-  margin-bottom: 1.25rem;
-}
-
-.textarea {
-  height: 120px;
-  resize: none;
-}
-
-.error__message {
-  position: absolute;
-  bottom: -12%;
-  left: 0;
-  font-size: var(--small-font-size);
-  font-weight: var(--weight-400);
-}
-
-.color-first {
-  color: var(--first-color);
 }
 
 /*=============== FOOTER ===============*/
@@ -632,4 +580,7 @@ input {
     inset-inline: 1rem;
     bottom: 1rem;
   }
+}
+h4 {
+  color: aqua;
 }
