--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -182,6 +182,10 @@ input {
   box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.25);
   animation: slide-down 0.7s;
 }
+.uil-linkedin::before {
+  width: 20px;
+  height: 20px;
+}
 
 @keyframes slide-down {
   0% {
